--- a/index.html
+++ b/index.html
@@ -48,5 +48,28 @@
         <br>
         <p>George Washington was born on February 22, 1732, at his family’s plantation on Pope’s Creek in Westmoreland County, in the British colony of Virginia, to Augustine Washington (1694-1743) and his second wife, Mary Ball Washington (1708-89). George, the eldest of Augustine and Mary Washington’s six children, spent much of his childhood at Ferry Farm, a plantation near Fredericksburg, Virginia. After Washington’s father died when he was 11, it’s likely he helped his mother manage the plantation.Few details about Washington’s early education are known, although children of prosperous families like his typically were taught at home by private tutors or attended private schools. It’s believed he finished his formal schooling at around age 15. As a teenager, Washington, who had shown an aptitude for mathematics, became a successful surveyor. His surveying expeditions into the Virginia wilderness earned him enough money to begin acquiring land of his own.In 1751, Washington made his only trip outside of America, when he travelled to Barbados with his older half-brother Lawrence Washington (1718-52), who was suffering from tuberculosis and hoped the warm climate would help him recuperate. Shortly after their arrival, George contracted smallpox. He survived, although the illness left him with permanent facial scars. In 1752, Lawrence, who had been educated in England and served as Washington’s mentor, died. Washington eventually inherited Lawrence’s estate, Mount Vernon, on the Potomac River near Alexandria, Virginia.</p>
     </section>
-
+<section id="videos">
+<h1>Videos</h1>
+<div class="line"></div>
+<iframe width="900" height="500" src="https://www.youtube.com/embed/oeff14XdS9k" frameborder="0" allow="fullscreen; accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
+<br>
+<br>
+<iframe width="900" height="500" src="https://www.youtube.com/embed/k3kcl2HDlww" frameborder="0" allow=" fullscreen; accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" ></iframe>
+</section>
+<section id="works">
+<h1>Works</h1>
+<div class="line"></div>
+<iframe width="900" height="500" src="https://en.wikipedia.org/wiki/George_Washington#Colonial_military_career_(1752%E2%80%931758)" ></iframe>
+</section>
+<br>
+<br>
+<br>
+<br>
+<section id="writings">
+<h1>Writings</h1>
+<div class="line"></div>
+<a class="ariticle" href="https://www.loc.gov/resource/mgw1a.002/?sp=2" target="_blank">goerge washington's notes</a>
+<br>
+<br>
+</section>
 </body></html>
